# esp-rf-sense

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yaml  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.dashboard-bootstrap/: payload-00  payload-01  payload-02
.dashboard-bootstrap-v2/: part-000
.github/implementation-patch/: part-01  part-02  part-03  part-05
.github/research-presence-payload/: part-00  part-01  part-aa  part-ab  part-ac  part-ad  part-ae  part-af  part-ag  part-ah
.github/workflows/: add-unit-test-log.yml  apply-research-presence-merge.yml  apply-research-presence.yml  container.yml  dashboard-e2e.yml  deploy-ota.yml  e2e-probe.yml  e2e-state-probe.yml  export-merge-pr.yml  export-merge-source.yml  export-source.yml  firmware-ci.yml  fix-position-guard.yml  fix-room-import.yml  fix-slot-fallback.yml  localization-gate.yml  pages-xy.yml  promote-position-ready.yml  release.yml  tools-ci.yml  unit-test-probe.yml  usb-mcp-ci.yml
apps/dashboard/: package.json  tsconfig.json
deploy/unraid/: rf-sense.xml
docker/: entrypoint.sh
docs/: architecture.md  chatgpt-github-development.md  csi-protocol.md  device-ota-onboarding.md  experiment-protocol.md  hardware-placement.md  hardware-xy-validation.md  initial-bootstrap.md  known-limitations.md  live-view.md  node-runtime.md  ota-deployment.md  ota-recovery.md  position-write-test.txt  quick-bar-calibration.md  research-presence-test-matrix.md  research-presence-validation.md  security-decisions.md  unraid-container.md  wifi-provisioning.md
firmware/: CMakeLists.txt  ESP32-EXPERIMENT.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32-experiment  sdkconfig.esp32-experiment
firmware/components/control_api/: CMakeLists.txt  ControlApi.cpp
firmware/components/control_api/include/: ControlApi.h
firmware/components/ota_manager/: BootGuard.cpp  CMakeLists.txt  OtaManager.cpp  OtaManifest.cpp  OtaManifestJson.cpp
firmware/components/ota_manager/certs/: ota_root_ca.pem
firmware/components/ota_manager/include/: BootGuard.h  OtaManager.h  OtaManifest.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml
firmware/test/host/: CMakeLists.txt  check.h  test_config_codec.cpp  test_frame_ring.cpp  test_ota_manifest.cpp  test_protocol.cpp
firmware/tools/: build_bootstrap_bundle.py  gen_manifest.py  size_check.py
models/: dashboard-labels.json
recordings/dashboard/: 2026-06-18T16-10-46-583Z-empty.jsonl  2026-06-18T16-10-46-583Z-empty.meta.json  2026-06-18T16-11-17-241Z-occupied-moving.jsonl  2026-06-18T16-11-17-241Z-occupied-moving.meta.json  2026-06-18T16-11-40-042Z-empty.jsonl  2026-06-18T16-11-40-042Z-empty.meta.json  2026-06-18T16-13-59-681Z-auto-smoke.jsonl  2026-06-18T16-13-59-681Z-auto-smoke.meta.json  2026-06-19T01-20-47-362Z-occupied-stationary.meta.json  2026-06-19T01-22-23-023Z-occupied-moving.meta.json  2026-06-19T01-24-49-173Z-empty.meta.json  2026-06-19T21-20-42-582Z-occupied-door.meta.json  2026-06-20T00-21-19-004Z-empty.meta.json  2026-06-20T00-22-58-792Z-empty.meta.json  2026-06-20T00-24-47-116Z-empty.meta.json  2026-06-20T00-26-32-241Z-empty.meta.json  2026-06-20T00-44-38-141Z-occupied-door.jsonl  2026-06-20T00-44-38-141Z-occupied-door.meta.json  2026-06-20T00-44-51-972Z-occupied-door.meta.json  2026-06-20T00-48-19-546Z-occupied-left.meta.json  2026-06-20T00-50-30-129Z-occupied-center.meta.json  2026-06-20T00-53-02-010Z-occupied-right.meta.json
recordings/run1/: run-2026-06-15T16-26-06-567Z.meta.json  run-2026-06-15T16-28-35-896Z.meta.json  run-2026-06-15T16-39-48-989Z.meta.json  run-2026-06-15T16-41-17-803Z.meta.json  run-2026-06-15T16-58-15-047Z.jsonl  run-2026-06-15T16-58-15-047Z.meta.json  run-2026-06-15T16-59-57-789Z.meta.json  (+1 more)
tools/: flash-configured.mjs  rf.mjs
tools/analysis/: pyproject.toml
tools/analysis/rfsense_analysis/: __init__.py  cli.py  csi.py  dashboard.py  dashboard_app.py  dashboard_entry.py  dataset.py  features.py  filters.py  live.py  livemodel.py  models.py  portable.py  protocol.py  scene.py  scene_model.py  splits.py
tools/analysis/rfsense_analysis/web/: app.js  boot.js  control-center.css  controls.js  index.html  main.js  scene-view.js  stream.js  styles.css  timeline.js  ui.js
tools/analysis/tests/: test_csi.py  test_features.py  test_filters.py  test_live.py  test_models.py  test_protocol.py  test_splits.py
tools/cli/: package.json
(+198 files in other folders)
