[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rfsense-analysis"
version = "0.1.0"
description = "Offline CSI analysis, live inference, and an interactive RF scene dashboard."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
rfsense-parse = "rfsense_analysis.cli:parse_main"
rfsense-features = "rfsense_analysis.cli:features_main"
rfsense-evaluate = "rfsense_analysis.cli:evaluate_main"
rfsense-train = "rfsense_analysis.cli:train_main"
rfsense-live = "rfsense_analysis.dashboard_entry:main"
rfsense-live-legacy = "rfsense_analysis.live:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rfsense_analysis*"]

[tool.setuptools.package-data]
rfsense_analysis = ["web/*.html", "web/*.css", "web/*.js"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
